<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VELLC_LOGIN">

    <TextView
        android:id="@+id/textViewUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_usuario" />

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editextView_usuario"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textViewContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_contraseña" />

    <EditText
        android:id="@+id/editTextContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editextView_contraseña"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/buttonIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_Ingresar" />

    <Button
        android:id="@+id/buttonRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/button_Registrar"
        android:onClick="registar" />
</LinearLayout>